--- a/style.css
+++ b/style.css
@@ -79,6 +79,8 @@ footer{
 #skills li{
     list-style-type: none;
     color:#FF9466;
+    box-sizing: border-box;
+    width: max-content;
 }
 a:link{
     color:white;
