--- a/style.css
+++ b/style.css
@@ -4,10 +4,19 @@ html{
     font-family: 'Libre Franklin', sans-serif;
     scroll-behavior: smooth;
     overflow-x: hidden;
+    cursor: url('img/cursor.png'), auto;
 }
+header, #intro, #skills, #talk{
+    margin-left: 2%;
+    margin-right: 2%;
+    text-align: center;
+} 
 header{
     display: flex;
     flex-direction: row;
+    padding-top: 5%;
+    justify-content: center;
+
 }
 #intro{
     padding-top: 5%;
@@ -23,7 +32,6 @@ h1{
 #intro p{
     padding-top: 2.5%;
     padding-bottom: 3%;
-    font-style: italic;
     font-weight: 550;
     font-size: 2em;
 }
@@ -44,20 +52,18 @@ h1{
     margin-left: auto;
     margin-right: auto;
 }
-
 #skills h2, h1{
     color:#CFFF04;
 }
 #skills h2{
-    -webkit-text-stroke-width: 0.05px;
+    -webkit-text-stroke-width: 0.2px;
     -webkit-text-stroke-color: black;
-    font-size: 2em;
-    animation-duration: 7s;
-    animation-name: slidein;
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
+    font-size: 2.5em;
+    font-weight: 500;
 }
-
+#projects{
+    margin-top:50px;
+}
 #projects h2{
     color:black;
     box-sizing: content-box;
@@ -69,7 +75,14 @@ h1{
 }
 
 footer{
-    margin-top: 30vh;
+    margin-top: 10%;
+    list-style-type: none;
+}
+footer li{
+    display: inline;
+    padding-left: 10px;
+    padding-right: 10px;
+    color:white;
 }
 
 #skills ul{
@@ -81,6 +94,8 @@ footer{
     color:#FF9466;
     box-sizing: border-box;
     width: max-content;
+    flex-basis: 100%;
+    height:0;
 }
 a:link{
     color:white;
