--- a/style.css
+++ b/style.css
@@ -93,12 +93,6 @@ footer{
     margin-top: 10%;
     list-style-type: none;
 }
-footer li{
-    display: inline;
-    padding-left: 10px;
-    padding-right: 10px;
-    color:white;
-}
 
 #skills li{
     list-style-type: none;
@@ -169,7 +163,13 @@ a:active{color:#9ED3FF;}
         width:39%; height: auto;
     }
     
-
+    footer li{
+        display: block;
+        color: white;
+        margin-left: auto;
+        margin-right: auto;
+        padding-bottom: 10px;
+    }
 }
 
 
@@ -199,4 +199,11 @@ a:active{color:#9ED3FF;}
         width:30%;
         height: auto;
     }
+    footer li{
+        display: inline;
+        padding-left: 10px;
+        padding-right: 10px;
+        color:white;
+    }
+    
 }
