--- a/style.css
+++ b/style.css
@@ -68,7 +68,10 @@ h1{
     color:white;
     margin-left: 20px;
 }
-/*project 1 rick and morty*/
+#projects{
+    margin-left: 50px;
+    margin-right: 50px;
+ }
 #rick, #dress-up, #blood-of-christ, #shump,
 #suburbs, #snowflakes,#hangman, #game-of-life{
     display: block;
@@ -76,6 +79,12 @@ h1{
     width: 100%;
     max-height: max-content;
     border-radius: 10px;
+    padding: 20px;
+    padding-bottom: 25px;
+    margin-bottom: 20px;
+    border-style: solid;
+    border-width: 5px;
+    border-color: white;
 }
 #rick, #dress-up, #blood-of-christ, #shump,
 #suburbs, #snowflakes img iframe{
@@ -148,27 +157,16 @@ a:active{color:#9ED3FF;}
         margin-left: auto;
         margin-right: auto;
       }
-     
-     #rick, #dress-up, #blood-of-christ, #shump, #suburbs, #snowflakes img{
-        float: center;
-        width:80%;
-        height: auto;
-     }
-     #blood-of-christ iframe{
-        float: center;
-        width: 100%;
-        height: auto;
-     }
-     #shump img{
-        width:39%; height: auto;
-    }
-    
     footer li{
         display: block;
         color: white;
         margin-left: auto;
         margin-right: auto;
         padding-bottom: 10px;
+    }
+    #projects iframe{
+        width: max-content;
+        height: auto;
     }
 }
 
@@ -212,11 +210,5 @@ a:active{color:#9ED3FF;}
         background-color: #201672;
            
     }
-    #rick, #dress-up, #blood-of-christ, #shump, #suburbs, #snowflakes{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        margin-right: 5%;
-     }
     
 }
