--- a/style.css
+++ b/style.css
@@ -72,8 +72,14 @@ h1{
     margin-left: 50px;
     margin-right: 50px;
  }
+ #graphic-design img{
+    margin-left: auto;
+    margin-right: auto;
+    
+ }
 #rick, #dress-up, #blood-of-christ, #shump,
-#suburbs, #snowflakes,#hangman, #game-of-life{
+#suburbs, #snowflakes,#hangman, #game-of-life, #music, #turtles, #smilies,
+#butterfly, #flyer{
     display: block;
     box-sizing: border-box;
     width: 100%;
