added more content

--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ h1{
     margin-right: auto;
     
  }
-#rick, #dress-up, #blood-of-christ,
+#rick, #dress-up, #blood-of-christ, #alien-invasion, #duck-in-the-chaos
 #suburbs, #snowflakes, #happy-taxing, #ar-demo, #level-design,
 #music, #turtles, #butterfly{
     display: block;
