--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html{
     background-color: #201672;
-    color: #fa81a1;
+    color: rgb(255, 190, 243);
     font-family: 'Libre Franklin', sans-serif;
     scroll-behavior: smooth;
     overflow-x: hidden;
