--- a/style.css
+++ b/style.css
@@ -142,6 +142,10 @@ a:active{color:#9ED3FF;}
 }
 @media only screen and (max-width:800px) {
 
+    img{
+        width: 300px;
+        height: 100%;
+    }
       .header{
         display: block;
         padding-top: 500px;
