logo is updated, cursor doesn't look like intended

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ html{
     font-family: 'Libre Franklin', sans-serif;
     scroll-behavior: smooth;
     overflow-x: hidden;
-    cursor: url('img/cursor.png'), auto;
+    cursor: url('img/cursor3.png'), auto;
     list-style-type: none;
     font-size: 2.5em;
 }
