--- a/style/style.css
+++ b/style/style.css
@@ -6,14 +6,13 @@ html{
     font-family: "Liter", serif;
     margin: 0px 16px;
     font-size: 1.5em;
-    position: absolute;
 }
 header{
     display: flex;
-    flex-direction: row;
     justify-content: space-between;
     background-color: bisque;
     align-items: center;
+    padding: 0px 16px;
 }
 #intro img{
     display: block;
