--- a/style/style.css
+++ b/style/style.css
@@ -13,12 +13,16 @@ header{
     background-color: bisque;
     align-items: center;
     padding: 0px 16px;
+    position: fixed;
+    top:0;
+    box-sizing: border-box;
+    width: 97vw;
 }
 #intro img{
     display: block;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 50px;
+    margin-top: 20vh;
 }
 .featured-projects ul{
     list-style-type: none;
@@ -37,6 +41,7 @@ button, .featured-projects li{
     border-style: solid;
     border-radius: 20px;
     font-size: 0.8rem;
+    background-color: white;
 }
 button{
     font-size: 1em;
@@ -51,7 +56,7 @@ button{
 #nav{
     background-color: bisque;
     position: fixed;
-    width: 100%;
+    width: 97vw;
     height: 100%;
     display: none;
 }
@@ -79,4 +84,8 @@ button{
     flex-direction: row;
     gap: 50px;
     align-items: first baseline;
+}
+a{
+    text-decoration: none;
+    color: black;
 }
