--- a/style/style.css
+++ b/style/style.css
@@ -89,3 +89,8 @@ a{
     text-decoration: none;
     color: black;
 }
+footer{
+    font-size: 0.5em;
+    text-align: center;
+    margin-top: 30%;
+}
