--- a/style/style.css
+++ b/style/style.css
@@ -15,8 +15,9 @@ header{
     padding: 0px 16px;
     position: fixed;
     top:0;
+    left: 0;
     box-sizing: border-box;
-    width: 97vw;
+    width: 100vw;
 }
 #intro img{
     display: block;
@@ -56,8 +57,9 @@ button{
 #nav{
     background-color: bisque;
     position: fixed;
-    width: 97vw;
+    width: 100vw;
     height: 100%;
+    left: 0;
     display: none;
 }
 #nav ul{
