added content tattva content

--- a/style/style.css
+++ b/style/style.css
@@ -19,6 +19,7 @@ header{
     box-sizing: border-box;
     width: 100vw;
     z-index: 1;
+    cursor: pointer;
 }
 #intro img{
     display: block;
