--- a/style/style.css
+++ b/style/style.css
@@ -100,3 +100,14 @@ footer{
     text-align: center;
     margin-top: 30%;
 }
+
+@media screen and (min-width: 1024px) {
+    html{
+        font-size: 1em;
+        margin: 0px 50px ;
+    }
+    #featured-projects img, #intro img{
+        width: 30%;
+        height: auto;
+    }
+  }
