--- a/style/style.css
+++ b/style/style.css
@@ -5,7 +5,7 @@ img{
 html{
     font-family: "Liter", serif;
     margin: 0px 16px;
-    font-size: 1.5em;
+    font-size: 1em;
 }
 header{
     display: flex;
@@ -50,6 +50,13 @@ button{
     font-size: 1em;
     cursor: pointer;
 }
+#featured-projects-wrapper{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 2rem;
+    padding: 2rem 0;
+}
+
 .featured-projects{
     box-sizing: border-box;
     background-color: bisque;
