--- a/style/nav-styles.css
+++ b/style/nav-styles.css
@@ -1,5 +1,5 @@
-html{
-    font-family: "Liter", serif;
+body{
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     /*margin: 0px 16px;*/
     font-size: 1em;
 }
