--- a/style/works-style.css
+++ b/style/works-style.css
@@ -33,9 +33,10 @@
     box-sizing: content-box;
     border-width: 1px;
     width: max-content;
-    border-radius: 10px;
+    height: 20px;
+    border-radius: 20px;
     border-style: solid;
-    padding: 5px;
+    padding: 10px;
     margin-right: 10px;
 }
 
