made a new layout

--- a/style/works-style.css
+++ b/style/works-style.css
@@ -1,23 +1,37 @@
 .featured-work{
      display: grid; 
     grid-template-columns: auto 1fr; 
-    grid-template-rows: 1fr 1fr 1fr; 
+    grid-template-rows: auto 1fr auto; 
     gap: 0px 10px; 
     grid-template-areas: 
     "image title"
     "image body"
     "image tags";
-    align-self: flex-start;
-    padding: 20px;
 }
-.featured-work ul, h4, p {
-    margin: 0px;
+h1{
+    text-align: center;
+}
+.featured-work, .work-button {
+    box-sizing: border-box;
+    width: 90%;
+    height: auto;
+    background-color: #20186F;
+    color:white;
+    margin: 30px auto;
+    padding: 20px;
+    border-radius: 20px;
+    word-wrap: break-word;
+    white-space: normal;
+    
+}
+.featured-work ul, h2, p {
+    margin: 1%;
     padding: 0px;
 }
 
-.featured-work img {
-    width: 128px;
-    height: auto;
+.visual {
+    width: 400px;
+    height: 400px;
     border-radius: 10px;
     grid-area: image;
 }
@@ -25,6 +39,7 @@
 .featured-work ul {
     list-style-type: none;
     display: flex;
+    flex-wrap: wrap;
     flex-direction: row;
     grid-area: tags;
 }
@@ -33,6 +48,8 @@
     box-sizing: content-box;
     border-width: 1px;
     width: max-content;
+    background-color: rgba(255, 255, 255);
+    color:black;
     height: 20px;
     border-radius: 20px;
     border-style: solid;
@@ -48,3 +65,10 @@
     grid-area: body;
 }
 
+.work-button {
+    background-color: white;
+}
+
+#last-div {
+    margin-bottom: 300px;
+}
