--- a/style/nav-styles.css
+++ b/style/nav-styles.css
@@ -1,12 +1,15 @@
 body{
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: "Liter", sans-serif;
+    font-weight: 400;
+    font-style: normal;
     /*margin: 0px 16px;*/
     font-size: 1em;
 }
 header{
     display: flex;
     justify-content: space-between;
-    background-color: bisque;
+    background-color: #20186F;
+    color:white;
     width: 100%;
     height: auto;
     cursor: pointer;
@@ -19,21 +22,27 @@ video{
     width: 100%;
 }
 
-nav {
-    background-color: bisque;
-    box-sizing: border-box;
-    width: 100vw;
-    height: 100vh;
-    z-index: 1;
-    position: fixed;
-}
-
 nav ul{
     list-style-type: none;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: space-around;
     align-items: stretch;
-    font-size: 2em;
+    font-size: 1em;
     font-weight: 400;
+    z-index: 1;
+}
+
+footer{
+    text-align: center;
+    box-sizing: border-box;
+    width: 100%;
+    height: max-content;
+    background-color: rgb(102, 5, 5);
+    color:white;
+    padding: 1px;
+    margin: 0;
+    position: fixed;
+    bottom: 0;
+    left: 0;
 }
