--- a/style/works-style.css
+++ b/style/works-style.css
@@ -36,6 +36,11 @@ h1{
     height: 400px;
     border-radius: 10px;
     grid-area: image;
+    transition: transform .2s;
+}
+
+.visual:hover{
+    transform: scale(1.5);
 }
 
 .featured-work ul {
